ShardScript/include/shard/ShardScriptExtern.hpp

    // =========================================================================
    // Compilation Context API
    // =========================================================================

    SHARD_API shard::CompilationContext* Shard_CreateCompilationContext();
    SHARD_API int Shard_DestroyCompilationContext(shard::CompilationContext* ctx);
    SHARD_API int Shard_AddLibrary(shard::CompilationContext* ctx, const wchar_t* path);
    SHARD_API int Shard_AddLibraries(shard::CompilationContext* ctx, const wchar_t* const* paths, std::size_t count);
    SHARD_API int Shard_AddSource(shard::CompilationContext* ctx, const wchar_t* sourceName, const wchar_t* code, shard::CompilationUnitOrigin origin);
    SHARD_API int Shard_AddSourceFile(shard::CompilationContext* ctx, const wchar_t* filePath, shard::CompilationUnitOrigin origin);
    SHARD_API int Shard_Analyze(shard::CompilationContext* ctx);
    SHARD_API shard::ApplicationDomain* Shard_Compile(shard::CompilationContext* ctx);
    SHARD_API shard::ApplicationDomain* Shard_CompileAndRun(shard::CompilationContext* ctx);
    SHARD_API int Shard_SetEntryPoint(shard::CompilationContext* ctx, int value);
    SHARD_API int Shard_GetEntryPoint(shard::CompilationContext* ctx);
    // =========================================================================
    // Diagnostics API
    // =========================================================================

    SHARD_API int Shard_HasErrors(shard::CompilationContext* ctx);
    SHARD_API int Shard_GetErrorCount(shard::CompilationContext* ctx);
    SHARD_API int Shard_ResetDiagnostics(shard::CompilationContext* ctx);
    SHARD_API int Shard_GetDiagnostics(shard::CompilationContext* ctx, wchar_t* buffer, int bufferLen);
    // =========================================================================
    // Symbol Inspection API
    // =========================================================================

    SHARD_API int Shard_GetCompilationUnitCount(shard::CompilationContext* ctx);
    SHARD_API shard::CompilationUnitSyntax* Shard_GetCompilationUnit(shard::CompilationContext* ctx, int index);
    SHARD_API shard::TypeSymbol* Shard_FindType(shard::CompilationContext* ctx, const wchar_t* name);
    SHARD_API int Shard_AddCompilationUnit(shard::CompilationContext* ctx, shard::CompilationUnitSyntax* unit);
    SHARD_API int Shard_MarkForReAnalyze(shard::CompilationContext* ctx);